<resources>
    <string name="app_name">Team_CS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="action_create_account_short">회원가입</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Sign in</string>
    <string name="loading">loading...</string>

    <string name="button">Button</string>
    <string name="content">내용</string>

    <!-- String related to create account-->
    <string name="radio_doctor">의사</string>
    <string name="radio_patient">환자</string>
    <string name="account_name">이름</string>
    <string name="account_name_eng">Name</string>
    <string name="account_email">이메일</string>
    <string name="account_password">비밀번호</string>
    <string name="account_phone">핸드폰 번호</string>
    <string name="account_phone_eng">Phone</string>
    <string name="account_phone_warning">\'-\'는 빼고 입력해주세요</string>
    <!-- String related to button-->
    <string name="button_ok">"확인"</string>
    <string name="button_cancel">"취소"</string>
</resources>
